2007-04-18T07:49	C.J. Adams-Collier <cjac@colliertech.org>
	* src/data/prebuild-1.7.xsd
	- removed default version from references
	
2007-04-06T12:42	C.J. Adams-Collier <cjac@colliertech.org>
	* src/data/autotools.xml
	- added support for /doc: output when XmlDocFile is not empty
	- not printing \t \\n on lines that have no content
	- gacutil now installs the root assembly instead of the one under
	  bin/Debug or whatever

2007-04-04T22:12	C.J. Adams-Collier <cjac@colliertech.org>
	* src/Core/Targets/AutotoolsTarget.cs
	- removed debugging Console.WriteLine()
	* src/data/autotools.xml
	- ensuring that install-sh and missing get distributed
	- explicitly stating that the sources, snk, resources and binary
	  references live under $(srcdir)
	- corrected uninstall target
	- verified distcheck completes successfully
	
2007-04-03T21:56	C.J. Adams-Collier <cjac@colliertech.org>
	* src/Core/Targets/AutotoolsTarget.cs
	- added a using for System.Diagnostics
	- added enum ClrVersion for use with the pkg-config parser
	- added class SystemPackage for use with the pkg-config parser
	- removed explicit "private" property of members since it is implied
	- flushing the stream-writer before it's closed
	- removed excess braces around an if statement
	! NormalizeAsmName(), AddAssembly(), GetAssembliesWithLibInfo(),
	  GetAssembliesWithoutLibInfo(), ProcessPiece(),
	  GetVariableFromPkgConfig(), ParsePCFile(),
	  RegisterSystemAssemblies(), RunInitialization()
	- pulled the above from MonoDevelop to parse the system pkgconfig
	  files and determine /pkg: arguments.  Original sources are here:
	  http://svn.myrealbox.com/source/trunk/monodevelop/Core/src/MonoDevelop.Core/MonoDevelop.Core/SystemAssemblyService.cs
	  http://svn.myrealbox.com/source/trunk/monodevelop/Core/src/MonoDevelop.Core/MonoDevelop.Core/ClrVersion.cs
	! WriteProject()
	- now gathering project version from AssemblyInfo.cs if it is part
	  of the project
	- changed the declaration of the ArrayList's in the method